# morel-rust

./: Cargo.toml
src/: wasm.rs
