# Licensed to Julian Hyde under one or more contributor license
# agreements.  See the NOTICE file distributed with this work
# for additional information regarding copyright ownership.
# Julian Hyde licenses this file to you under the Apache
# License, Version 2.0 (the "License"); you may not use this
# file except in compliance with the License.  You may obtain a
# copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
# either express or implied.  See the License for the specific
# language governing permissions and limitations under the
# License.

[package]
name = "morel"
version = "0.2.0"
authors = ["Julian Hyde <jhyde@apache.org>"]
edition = "2024"

# Generate portable dynamic code when building the library.
# This is necessary for compiling WebAssembly modules.
# We could also add an `rlib` option
# if we ever want to release the library as a Rust crate as well.
[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# lint: sort until '^$'
console_error_panic_hook = "0.1.7"
im = "15.1.0"
pest = "2.1"
pest_ascii_tree = "0.1.0"
pest_consume = "1.1"
phf = { version = "0.12", features = ["macros"] }
regex = "1.11.2"
rustc_version = "0.4"
similar = "2.7.0"
strum = "0.27.2"
strum_macros = "0.27.2"
wasm-bindgen = "0.2"

[features]
# Enabling profiling with `cargo build --features=profiling`
# causes the unifier to print timing and iteration statistics to stdout.
profiling = []


[lints.rust]
# lint: sort until '^$' where '^[a-z]'
unused_imports = "deny"
unused_mut = "deny"
unused_variables = "deny"

[lints.rustdoc]
# lint: sort until '^$' where '^[a-z]'
bare_urls = "deny"                       # Bare URLs (should use proper links)
broken_intra_doc_links = "deny"         # Broken links in docs
invalid_codeblock_attributes = "deny"   # Invalid code block syntax
invalid_html_tags = "deny"              # Invalid HTML in docs
invalid_rust_codeblocks = "deny"        # Invalid Rust code examples
private_intra_doc_links = "deny"        # Links to private items

[lints.clippy]
# lint: sort until '^$' where '^[a-z]'
borrowed_box = "deny"
box_collection = "deny"
boxed_local = "deny"
#clone_on_ref_ptr = "deny"
enum_glob_use = "deny"
explicit_iter_loop = "deny"
map_unwrap_or = "deny"
mut_mut = "deny"
needless_pass_by_value = "deny"
#redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
redundant_field_names = "deny"
redundant_pattern_matching = "deny"
single_component_path_imports = "deny"
single_match_else = "deny"
too_many_arguments = "allow"
unnecessary_mut_passed = "deny"
unnecessary_unwrap = "deny"
used_underscore_binding = "deny"
#use_self = "deny"
useless_conversion = "deny"
wildcard_imports = "deny"
